<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/ministerio_do_meio_ambiente"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="199dp"
        android:text="@string/est_aplica_o_consiste_em_mostrar_informa_es_sobre_o_uso_de_agrot_xicos_proibidos_que_causam_grandes_impactos_nos_len_is_fre_ticos_rios_e_mares"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/cyan"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.758"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/btn_novoCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="340dp"
        android:text="@string/cadastrar_novo_usu_rio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.953"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>